<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txt_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_type" />

    <EditText
        android:id="@+id/txt_subtype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_subtype" />

    <EditText
        android:id="@+id/txt_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_comment" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_alignParentStart="true"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/chk_shortlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/shortlist" />

            <CheckBox
                android:id="@+id/chk_followup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/followup" />

            <CheckBox
                android:id="@+id/chk_harvest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/harvest" />

            <CheckBox
                android:id="@+id/chk_prune"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/prune" />

            <CheckBox
                android:id="@+id/chk_scion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/scion" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_relocate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/relocate"
            android:drawableLeft="@drawable/ic_map_locator"
            android:drawablePadding="5dp"
            android:layout_marginEnd="20dp"/>

    </RelativeLayout>
</LinearLayout>